Interactive main chat again.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -61077,6 +61077,9 @@
         }
       }
     },
+    "Interactive chat" : {
+
+    },
     "IP address or domain name" : {
       "localizations" : {
         "de" : {
