DNS lookup strategy in SRT(LA) stream settings.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -109739,6 +109739,9 @@
         }
       }
     },
+    "System seems to work best for TMobile. IPv4 probably best for IRLToolkit." : {
+
+    },
     "Take a snapshot." : {
       "localizations" : {
         "de" : {
