Batch send SRT packets for slightly lower CPU usage.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -102329,6 +102329,9 @@
         }
       }
     },
+    "SRT(LA) batch send" : {
+
+    },
     "SRT(LA) port number missing" : {
       "localizations" : {
         "de" : {
