Swipe left to delete SRTLA connection priorities.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -13745,6 +13745,9 @@
         }
       }
     },
+    "a connection" : {
+
+    },
     "A connection with high priority will be used more than a connection with low priority if the high priority connection is stable. Unstable connections will get lowest priority regardless of configured priority until they are stable again." : {
       "localizations" : {
         "de" : {
