--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -123794,7 +123794,7 @@
         }
       }
     },
-    "Use phones as additional SRTLA bonding connections." : {
+    "Use phones as additional SRTLA bonding connections. Install Moblink on Android phones to use them." : {
 
     },
     "Use the Fast IRL algorithm unless you know what you are doing!" : {
