1234 as default Moblink password.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -90765,6 +90765,9 @@
         }
       }
     },
+    "Reset to default" : {
+
+    },
     "Resolution" : {
       "localizations" : {
         "de" : {
